unpackaged/main/default/objects/FS_Constants__mdt/FS_Constants__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is to hold the constant values.</description>
    <label>FS Constants</label>
    <pluralLabel>FS Constants</pluralLabel>
</CustomObject>