unpackaged/main/default/objects/FS_Constants__mdt/fields/FS_Checkbox_Value__c.field-meta.xml
<CustomField>
    <fullName>FS_Checkbox_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Value</label>
    <type>Checkbox</type>
</CustomField>