unpackaged/main/default/objects/FS_Constants__mdt/fields/FS_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>