unpackaged/main/default/objects/FS_Constants__mdt/fields/FS_Datetime__c.field-meta.xml
<CustomField>
    <fullName>FS_Datetime__c</fullName>
    <label>Datetime</label>
    <type>DateTime</type>
</CustomField>