unpackaged/main/default/objects/FS_Constants__mdt/fields/FS_Decimal_Value__c.field-meta.xml
<CustomField>
    <fullName>FS_Decimal_Value__c</fullName>
    <label>Decimal Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>