unpackaged/main/default/objects/FS_Constants__mdt/fields/FS_Integer_Value__c.field-meta.xml
<CustomField>
    <fullName>FS_Integer_Value__c</fullName>
    <label>Integer Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>