unpackaged/main/default/objects/FS_Constants__mdt/fields/FS_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>FS_Text_Value__c</fullName>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>